; ModuleID = '/home/carl/AnghaBench/htop/extr_ColumnsPanel.c_ColumnsPanel_delete.c'
source_filename = "/home/carl/AnghaBench/htop/extr_ColumnsPanel.c_ColumnsPanel_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @ColumnsPanel_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ColumnsPanel_delete(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %2, align 8
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @Panel_done(i32* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @free(i32* %9)
  ret void
}

declare dso_local i32 @Panel_done(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
